# Gbait

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  RESOURCES.md  flake.nix  justfile
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md  task.md
.github/workflows/: ci.yml
.helix/: languages.toml
docs/: DAILY_LOG.md  GITHUB_SETUP.md  MILESTONES.md  PROGRESS.md  about.md
docs/agents/: domain.md
docs/templates/: daily-checklist.md  journal-template.md  release-review.md  weekly-review.md
journal/: week-1.md
nix/: devshell.nix  git-hooks.nix  packages.nix  treefmt.nix
